[metadata]
name = charmhelpers
summary = Helpers for Juju Charm development
description-file = 
    README.rst
author = Charmers
author-email = juju@lists.ubuntu.com
home-page = https://github.com/juju/charm-helpers
classifier = 
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages = 
    charmhelpers
scripts =
    bin/chlp
    bin/contrib/charmsupport/charmsupport
    bin/contrib/saltstack/salt-call

[nosetests]
with-coverage=1
cover-erase=1
cover-package=charmhelpers,tools

[upload_sphinx]
upload-dir = docs/_build/html
